force-app/main/default/objects/Request__c/fields/Request_Subject__c.field-meta.xml
<CustomField>
    <fullName>Request_Subject__c</fullName>
    <label>Request Subject</label>
    <type>TextArea</type>
</CustomField>