force-app/main/default/objects/Request__c/fields/Volume_Test_Text_Field_102__c.field-meta.xml
<CustomField>
    <fullName>Volume_Test_Text_Field_102__c</fullName>
    <description>for Volume Testing</description>
    <label>Volume Test - Text Field 102</label>
    <length>255</length>
    <type>Text</type>
</CustomField>