force-app/main/default/objects/Request__c/listViews/InboundRequests_Request.listView-meta.xml
<ListView>
    <fullName>InboundRequests_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>InboundRequests</label>
    <queue>InboundRequests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>